[package]
name = "todos-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = [ "json" ]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "sqlite", "macros"] }